--- a/src/python3_course_for_devs/notebooks/list.ipynb
+++ b/src/python3_course_for_devs/notebooks/list.ipynb
@@ -20,19 +20,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 通过字面值形式创建\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "使用字面值形式\n"
+    "**使用字面值形式**\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +34,7 @@
        "['bar', 6, True, 3.4, None, {'a': 'b'}]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,14 +47,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "使用 `list` 方法\n",
-    "\n",
-    "默认创建一个空列表。\n"
+    "**使用 `list` 方法**\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -70,12 +61,13 @@
        "[]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# 默认创建一个空列表\n",
     "list()"
    ]
   },
@@ -83,23 +75,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 列表转换\n",
-    "\n",
-    "列表的类型转换用的还是 `list` 方法。\n",
-    "\n",
-    "`list`方法可以根据 [可迭代对象]('./types.ipynb') 创建列表。\n"
+    "> `list` 方法可以根据 [可迭代对象]('./iterator_generator.ipynb') 创建列表。\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- 字符串转列表\n"
+    "- 由字符串创建\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +96,7 @@
        "['f', 'o', 'o']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,14 +109,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- 元组转列表\n"
+    "- 由元组创建\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "list((1, 2, 3))"
    ]
@@ -137,14 +136,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- 集合转列表\n"
+    "- 由集合创建\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3]"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "list({1, 2, 3})"
    ]
@@ -153,21 +163,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- 字典转列表\n"
+    "- 由字典创建\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'a': 1, 'b': 2}"
+       "['a', 'b']"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,72 +194,201 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 迭代\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['bar', 6, True, 3.4, None, {'a': 'b'}, 3.4, None, {'a': 'b'}]\n",
-      "9\n",
-      "4\n",
-      "None None\n",
-      "['bar', 6, True, 3.4]\n",
-      "False True\n",
-      "-1 2\n",
+      "1\n",
       "2\n",
-      "3.4\n",
-      "None\n",
-      "{'a': 'b'}\n"
+      "3\n"
      ]
     }
    ],
    "source": [
-    "a = [\"bar\", 6, True]\n",
-    "b = [3.4, None, {\"a\": \"b\"}]\n",
-    "\n",
-    "# 连接、重复\n",
-    "s = a + b * 2  # 列表 b 重复两次之后和列表 a 连接\n",
-    "print(s)\n",
-    "\n",
-    "# 长\n",
-    "l = len(s)\n",
-    "print(l)\n",
-    "\n",
-    "# 元素位置获取\n",
-    "i = s.index(None)\n",
-    "print(i)\n",
-    "\n",
-    "# 索引访问\n",
-    "s[i]  # 正索引，从左向右索引从 0 开始\n",
-    "s[i - l]  # 负索引，从右向左索引从 -1 开始\n",
-    "print(s[i], s[i - l])\n",
-    "\n",
-    "# 切片\n",
-    "print(s[:i])\n",
-    "\n",
-    "# 成员运算\n",
-    "print(b in s, b not in a)\n",
-    "\n",
-    "# 最大/最小元素，需保证列表为数字列表\n",
-    "n = [1, -True, False, 2]\n",
-    "print(min(n), max(n))\n",
-    "\n",
-    "# 元素出现次数，与 str.count 不同，list.count 只接受一个参数\n",
-    "print(s.count(None))\n",
-    "\n",
-    "# 迭代\n",
-    "for item in b:\n",
-    "    print(item)"
+    "for n in [1, 2, 3]:\n",
+    "    print(n)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 列表内置方法/标准库操作\n"
+    "- 索引访问\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[1, 2, 3][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[1, 2, 3][-1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 切片\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2]"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[1, 2, 3][0:2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 3]"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[1, 2, 3][0:3:2]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 元素查找\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[1, 2, 3].index(2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 拼接、重复\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[1, 2] + [3, 4] * 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 计数\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[1, 2, 3].count(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 一些常用的字符串操作\n"
    ]
   },
   {
@@ -261,14 +400,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['bar', 'insert', 6, True, 3.4, None, {'a': 'b'}, 3.4, None, {'a': 'b'}, 'append', 'extend1', 'extend2']\n"
+      "['extend2', 'insert', 'extend1', 'append', 'new bar', 'insert', 6, True, 3.4, None, {'a': 'b'}, 3.4, None, {'a': 'b'}, 'append', 'extend1', 'insert', 'new extend2', 'append', 'extend1', 'extend2']\n"
      ]
     }
    ],
@@ -294,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -302,8 +441,8 @@
      "output_type": "stream",
      "text": [
       "insert\n",
-      "['bar', 6, True, 3.4, None, {'a': 'b'}, 3.4, None, {'a': 'b'}, 'append', 'extend1', 'extend2']\n",
-      "['bar', 6, True, 3.4, None, {'a': 'b'}, 3.4, None, {'a': 'b'}, 'extend1', 'extend2']\n",
+      "['extend2', 'extend1', 'append', 'new bar', 'insert', 6, True, 3.4, None, {'a': 'b'}, 3.4, None, {'a': 'b'}, 'append', 'extend1', 'insert', 'new extend2', 'append', 'extend1', 'extend2']\n",
+      "['extend2', 'extend1', 'new bar', 'insert', 6, True, 3.4, None, {'a': 'b'}, 3.4, None, {'a': 'b'}, 'append', 'extend1', 'insert', 'new extend2', 'append', 'extend1', 'extend2']\n",
       "[]\n"
      ]
     }
@@ -337,14 +476,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['new bar', 'insert', 6, True, 3.4, None, {'a': 'b'}, 3.4, None, {'a': 'b'}, 'append', 'extend1', 'extend2']\n"
+      "['new extend2', 'insert', 'extend1', 'append', 'new bar', 'insert', 6, True, 3.4, None, {'a': 'b'}, 3.4, None, {'a': 'b'}, 'append', 'extend1', 'insert', 'new extend2', 'append', 'extend1', 'extend2']\n"
      ]
     }
    ],
@@ -363,16 +502,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'new bar'"
+       "'new extend2'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,16 +531,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['extend2', 'extend1', 'append', {'a': 'b'}, None, 3.4, {'a': 'b'}, None, 3.4, True, 6, 'insert', 'new bar']\n",
-      "[-1, False, 1, 2]\n",
-      "[-1, False, 1, 2, 3]\n"
+      "['extend2', 'extend1', 'append', 'new extend2', 'insert', 'extend1', 'append', {'a': 'b'}, None, 3.4, {'a': 'b'}, None, 3.4, True, 6, 'insert', 'new bar', 'append', 'extend1', 'insert', 'new extend2']\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'int' object is not iterable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/songbinghui/Desktop/my_dev/typescript-inspired-python3-learning/src/python3_course_for_devs/notebooks/list.ipynb Cell 35\u001b[0m line \u001b[0;36m6\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/songbinghui/Desktop/my_dev/typescript-inspired-python3-learning/src/python3_course_for_devs/notebooks/list.ipynb#X22sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mprint\u001b[39m(s)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/songbinghui/Desktop/my_dev/typescript-inspired-python3-learning/src/python3_course_for_devs/notebooks/list.ipynb#X22sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39m# 不改变原数组，返回排序完新数组\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/songbinghui/Desktop/my_dev/typescript-inspired-python3-learning/src/python3_course_for_devs/notebooks/list.ipynb#X22sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39msorted\u001b[39;49m(n))\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/songbinghui/Desktop/my_dev/typescript-inspired-python3-learning/src/python3_course_for_devs/notebooks/list.ipynb#X22sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m n1 \u001b[39m=\u001b[39m n \u001b[39m+\u001b[39m [\u001b[39m3\u001b[39m]\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/songbinghui/Desktop/my_dev/typescript-inspired-python3-learning/src/python3_course_for_devs/notebooks/list.ipynb#X22sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39m# 对原列表进行排序\u001b[39;00m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'int' object is not iterable"
      ]
     }
    ],
@@ -428,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
