--- a/src/python3_course_for_devs/notebooks/list.ipynb
+++ b/src/python3_course_for_devs/notebooks/list.ipynb
@@ -350,9 +350,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 3, 4]"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "[1, 2] + [3, 4] * 2"
    ]
@@ -388,221 +399,131 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 一些常用的字符串操作\n"
+    "## 一些常用的列表操作\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 增\n"
+    "**添加元素**\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['extend2', 'insert', 'extend1', 'append', 'new bar', 'insert', 6, True, 3.4, None, {'a': 'b'}, 3.4, None, {'a': 'b'}, 'append', 'extend1', 'insert', 'new extend2', 'append', 'extend1', 'extend2']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# 在列表结尾增加一项\n",
-    "s.append(\"append\")\n",
-    "\n",
-    "# 在指定位置增加一项\n",
-    "s.insert(1, \"insert\")\n",
-    "\n",
-    "# 在结尾拼接另一个序列类型\n",
-    "s.extend((\"extend1\", \"extend2\"))\n",
-    "\n",
-    "print(s)"
+    "[1, 2].append(3)  # 尾部添加元素"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[1, 3].insert(1, \"insert\")  # 指定索引插入元素"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[1, 2].extend((3, 4))  # 尾部拼接一个可迭代对象，生成新列表"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 删\n"
+    "**删除元素**\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "insert\n",
-      "['extend2', 'extend1', 'append', 'new bar', 'insert', 6, True, 3.4, None, {'a': 'b'}, 3.4, None, {'a': 'b'}, 'append', 'extend1', 'insert', 'new extend2', 'append', 'extend1', 'extend2']\n",
-      "['extend2', 'extend1', 'new bar', 'insert', 6, True, 3.4, None, {'a': 'b'}, 3.4, None, {'a': 'b'}, 'append', 'extend1', 'insert', 'new extend2', 'append', 'extend1', 'extend2']\n",
-      "[]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# 删除之前先备份\n",
-    "_s = s.copy()\n",
-    "\n",
-    "# 在指定位置弹出一项，默认为最后一项\n",
-    "print(_s.pop(1))\n",
-    "\n",
-    "print(_s)\n",
-    "\n",
-    "# 移除列表中某项的第一个匹配\n",
-    "_s.remove(\"append\")\n",
-    "\n",
-    "print(_s)\n",
-    "\n",
-    "# 清空列表\n",
-    "_s.clear()\n",
-    "\n",
-    "print(_s)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 改\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['new extend2', 'insert', 'extend1', 'append', 'new bar', 'insert', 6, True, 3.4, None, {'a': 'b'}, 3.4, None, {'a': 'b'}, 'append', 'extend1', 'insert', 'new extend2', 'append', 'extend1', 'extend2']\n"
-     ]
-    }
-   ],
-   "source": [
-    "# 根据索引替换元素\n",
-    "s[0] = f\"new {s[0]}\"\n",
-    "print(s)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 查\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'new extend2'"
+       "1"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 直接根据索引获取\n",
-    "\n",
-    "s[0]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 排序\n"
+    "[1, 2].pop(0)  # 弹出列表指定索引位置元素，默认最后一项"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['extend2', 'extend1', 'append', 'new extend2', 'insert', 'extend1', 'append', {'a': 'b'}, None, 3.4, {'a': 'b'}, None, 3.4, True, 6, 'insert', 'new bar', 'append', 'extend1', 'insert', 'new extend2']\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'int' object is not iterable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/Users/songbinghui/Desktop/my_dev/typescript-inspired-python3-learning/src/python3_course_for_devs/notebooks/list.ipynb Cell 35\u001b[0m line \u001b[0;36m6\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/songbinghui/Desktop/my_dev/typescript-inspired-python3-learning/src/python3_course_for_devs/notebooks/list.ipynb#X22sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mprint\u001b[39m(s)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/songbinghui/Desktop/my_dev/typescript-inspired-python3-learning/src/python3_course_for_devs/notebooks/list.ipynb#X22sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39m# 不改变原数组，返回排序完新数组\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/songbinghui/Desktop/my_dev/typescript-inspired-python3-learning/src/python3_course_for_devs/notebooks/list.ipynb#X22sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39msorted\u001b[39;49m(n))\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/songbinghui/Desktop/my_dev/typescript-inspired-python3-learning/src/python3_course_for_devs/notebooks/list.ipynb#X22sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m n1 \u001b[39m=\u001b[39m n \u001b[39m+\u001b[39m [\u001b[39m3\u001b[39m]\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/songbinghui/Desktop/my_dev/typescript-inspired-python3-learning/src/python3_course_for_devs/notebooks/list.ipynb#X22sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39m# 对原列表进行排序\u001b[39;00m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'int' object is not iterable"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# 反向排序\n",
-    "s.reverse()\n",
-    "print(s)\n",
-    "\n",
-    "# 不改变原数组，返回排序完新数组\n",
-    "print(sorted(n))\n",
-    "\n",
-    "n1 = n + [3]\n",
-    "# 对原列表进行排序\n",
-    "n1.sort()\n",
-    "print(n1)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 判断相等\n"
+    "[1, 2, 3].remove(2)  # 移除列表第一个匹配元素"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "[1, 2].clear()  # 列表清空"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**排序**\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[1, 2, 3].reverse()  # 反排"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n",
-      "True\n",
-      "False\n",
-      "False\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[1, 2, 3]"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "import operator\n",
-    "\n",
-    "b = [2, 3]\n",
-    "c = [2, 3]\n",
-    "\n",
-    "# 值是否相等\n",
-    "print(operator.eq(b, c))\n",
-    "print(b == c)\n",
-    "\n",
-    "# 内存地址是否相同\n",
-    "print(b is c)\n",
-    "print(id(b) == id(c))"
+    "sorted([1, 2, 3])  # 创建一个排完序的新列表"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[1, 2, 3].sort()  # 对原列表直接排序"
    ]
   }
  ],
