--- a/src/python3_course_for_devs/notebooks/tuple.ipynb
+++ b/src/python3_course_for_devs/notebooks/tuple.ipynb
@@ -6,43 +6,191 @@
    "source": [
     "# 元组\n",
     "\n",
-    "元组是`序列类型`但非`可变类型`，（`可变类型`和`序列类型`的概念在 [数据类型]('./types.ipynb') 有讲）\n",
+    "元组是 [序列类型]('./types.ipynb')。\n",
     "\n",
-    "回想一下 `序列类型` 的通用操作有哪些？\n",
-    "\n",
-    "元组与列表不同，元素无法被更改，因此，经过优化的元组比列表内存占用更少，迭代效率更高。\n"
+    "元组与列表不同，元组是不可变对象，因此，经过优化的元组比列表内存占用更少，迭代效率更高。\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 创建一个元组\n"
+    "## 元组创建\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 通过字面值形式创建\n"
+    "**使用字面值形式**\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('foo', 5)"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 空元组\n",
-    "t0 = ()\n",
+    "()  # 空元组\n",
     "\n",
-    "# 包含一个元素的元组\n",
-    "t1 = (\"foo\",)\n",
+    "(\"foo\",)  # 包含一个元素的元组\n",
     "\n",
-    "t2 = (\"foo\", 5)\n",
-    "\n",
-    "# 仅使用逗号也可以\n",
-    "t3 = \"foo\", 5"
+    "t = \"foo\", 5  # 给变量赋值时，即使没有使用括号，仅使用逗号分隔，它们仍将被视为一个元组\n",
+    "t"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**使用 `tuple` 方法**\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "()"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 默认创建一个空元组\n",
+    "tuple()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> `tuple` 方法可以根据 [可迭代对象]('./iterator_generator.ipynb') 创建元组。\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 由字符串创建\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('f', 'o', 'o')"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tuple(\"foo\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 由列表创建\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 2, 3)"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tuple([1, 2, 3])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 由集合创建\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 2, 3)"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tuple({1, 2, 3})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 由字典创建\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('a', 'b')"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tuple({\"a\": 1, \"b\": 2})"
    ]
   },
   {
@@ -53,65 +201,205 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 迭代\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('bar', 6, True, 3.4, None, {'a': 'b'}, 3.4, None, {'a': 'b'})\n",
-      "9\n",
-      "4\n",
-      "None None\n",
-      "('bar', 6, True, 3.4)\n",
-      "False True\n",
-      "-1 2\n",
+      "1\n",
       "2\n",
-      "3.4\n",
-      "None\n",
-      "{'a': 'b'}\n"
+      "3\n"
      ]
     }
    ],
    "source": [
-    "a = (\"bar\", 6, True)\n",
-    "b = (3.4, None, {\"a\": \"b\"})\n",
-    "\n",
-    "# 连接、重复\n",
-    "s = a + b * 2  # 列表 b 重复两次之后和列表 a 连接\n",
-    "print(s)\n",
-    "\n",
-    "# 长\n",
-    "l = len(s)\n",
-    "print(l)\n",
-    "\n",
-    "# 元素位置获取\n",
-    "i = s.index(None)\n",
-    "print(i)\n",
-    "\n",
-    "# 索引访问\n",
-    "s[i]  # 正索引，从左向右索引从 0 开始\n",
-    "s[i - l]  # 负索引，从右向左索引从 -1 开始\n",
-    "print(s[i], s[i - l])\n",
-    "\n",
-    "# 切片\n",
-    "print(s[:i])\n",
-    "\n",
-    "# 成员运算\n",
-    "print(b in s, b not in a)\n",
-    "\n",
-    "# 最大/最小元素，需保证列表为数字列表\n",
-    "n = (1, -True, False, 2)\n",
-    "print(min(n), max(n))\n",
-    "\n",
-    "# 元素出现次数，与 str.count 不同，list.count 只接受一个参数\n",
-    "print(s.count(None))\n",
-    "\n",
-    "# 迭代\n",
-    "for item in b:\n",
-    "    print(item)"
+    "for n in (1, 2, 3):\n",
+    "    print(n)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 索引访问\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(1, 2, 3)[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(1, 2, 3)[-1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 切片\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 2)"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(1, 2, 3)[0:2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 3)"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(1, 2, 3)[0:3:2]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 元素查找\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(1, 2, 3).index(2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 拼接、重复\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 2, 3, 4, 3, 4)"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(1, 2) + (3, 4) * 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 计数\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(1, 2, 3).count(3)"
    ]
   },
   {
@@ -120,7 +408,30 @@
    "source": [
     "## 元组解包\n",
     "\n",
-    "## 命名元组\n"
+    "指将一个元组中的元素解包（unpack）并分配给多个变量。\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 1\n",
+    "y = 2\n",
+    "\n",
+    "# 使用元组解包交换变量的值\n",
+    "x, y = y, x\n",
+    "\n",
+    "print(x, y)"
    ]
   }
  ],
