--- a/src/python3_course_for_devs/notebooks/list.ipynb
+++ b/src/python3_course_for_devs/notebooks/list.ipynb
@@ -399,7 +399,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 一些常用的列表操作\n"
+    "## 一些列表操作\n"
    ]
   },
   {
@@ -433,7 +433,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "[1, 2].extend((3, 4))  # 尾部拼接一个可迭代对象，生成新列表"
+    "[1, 2].extend((3, 4))  # 尾部拼接一个可迭代对象"
    ]
   },
   {
