--- a/src/python3_course_for_devs/notebooks/set.ipynb
+++ b/src/python3_course_for_devs/notebooks/set.ipynb
@@ -6,183 +6,291 @@
    "source": [
     "# 集合\n",
     "\n",
-    "集合即非`序列类型`也非`可变类型`（`可变类型`和`序列类型`的概念在 [数据类型]('./types.ipynb') 有讲）\n",
+    "集合是无序但不重复的数据结构。\n",
     "\n",
-    "它是一个无序但不重复的数据结构\n",
-    "\n",
-    "集合的元素必须是可哈希的，而可哈希的对象必须是不可变的。这是因为集合是基于哈希表实现的，哈希表要求元素是可哈希的以确保高效的插入、查找和删除操作。\n",
-    "\n",
-    "不可变的对象在其生命周期中保持不变，因此它们的哈希值也不会改变。这使得可以使用对象的哈希值来确定其在集合中的位置，从而实现高效的集合操作。\n"
+    "集合的元素必须是 [可哈希的](./types.ipynb)。这是因为集合是基于哈希表实现的，哈希表要求元素是可哈希的以确保高效的插入、查找和删除操作。\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 创建一个集合\n"
+    "## 集合创建\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**使用字面值形式**\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{(1, 2), 1, 'x'}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "{1, \"x\", (1, 2)}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**使用 `set` 方法**\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "set()"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 默认创建一个空集合\n",
+    "set()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> `set` 方法可以根据 [可迭代对象]('./iterator_generator.ipynb') 创建集合。\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 由字符串创建\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'f', 'o'}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set(\"foo\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 由元组创建\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1, 2, 3}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set((1, 2, 3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 由列表创建\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1, 2, 3}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set([1, 2, 3])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 由字典创建\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'a', 'b'}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set({\"a\": 1, \"b\": 2})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 一些集合操作\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**添加元素**\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 空集合\n",
-    "set()\n",
-    "\n",
-    "# 使用大括号包裹的元素集合\n",
-    "my_set = {\"a\", 3, (2, \"t\"), 3}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 新增元素\n"
+    "{1, 2}.add(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{(2, 't'), 3, 'a', 'add', 'banana', 'cherry', 'durian', 'grape'}"
-      ]
-     },
-     "execution_count": 95,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# 新增一个元素\n",
-    "my_set.add(\"add\")\n",
-    "\n",
-    "# 用于将一个或多个可迭代对象的元素添加到集合中。\n",
-    "# 它可以接受多个参数，并将这些参数中的元素添加集合中。重复的元素不会被重复添加。\n",
-    "my_set.update([\"cherry\", \"durian\"], {\"grape\", \"banana\"})\n",
-    "\n",
-    "my_set"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 删除元素\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 96,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "banana\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{(2, 't'), 'a', 'add', 'cherry', 'durian', 'grape'}"
-      ]
-     },
-     "execution_count": 96,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# 元素不存在时 remove 会引发 KeyError 错误\n",
-    "my_set.remove(3)\n",
-    "\n",
-    "# discard 在元素不存在时无提示信息\n",
-    "my_set.discard(3)\n",
-    "\n",
-    "# pop 用于从集合中随机移除并返回一个元素。由于集合是无序的，无法确定具体移除的元素是哪个。\n",
-    "# 如果集合为空，调用 pop 方法会引发 KeyError 错误。\n",
-    "print(my_set.pop())\n",
-    "\n",
-    "my_set"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 97,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 97,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(my_set)\n",
-    "\n",
-    "3 in my_set"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 清空集合\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "my_set.clear()"
+    "{1, 2}.update([3], {\"x\"})  # 尾部拼接一个或多个可迭代对象"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 集合推导式\n",
-    "\n",
-    "推导式详情看这节[推导式 & 生成器表达式]('./comprehension.ipynb')\n"
+    "**删除元素**\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "{1, 2}.remove(2)  # 元素不存在时引发 KeyError"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "{1, 2}.discard(2)  # 元素不存在时无操作"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{4, 16}"
+       "1"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "{x**2 for x in range(1, 6) if x % 2 == 0}"
+    "{1, 2}.pop()  # 随机弹出集合元素，返回被弹出元素"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "{1, 2}.clear()  # 集合清空"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 逻辑操作\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**交**\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -191,79 +299,94 @@
        "{'a', 'c'}"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "s1 = set(\"abracadabra\")\n",
-    "s2 = set(\"alacazam\")\n",
-    "# 交\n",
-    "s1 & s2"
+    "set(\"abc\") & set(\"acc\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**差**\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'b', 'd', 'r'}"
+       "{'b'}"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 排除\n",
-    "s1 - s2"
+    "set(\"abc\") - set(\"acc\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**并**\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'a', 'b', 'c', 'd', 'l', 'm', 'r', 'z'}"
+       "{'a', 'b', 'c'}"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 或\n",
-    "s1 | s2"
+    "set(\"abc\") | set(\"acc\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**异或**\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'b', 'd', 'l', 'm', 'r', 'z'}"
+       "{'b'}"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 异或\n",
-    "s1 ^ s2"
+    "set(\"abc\") ^ set(\"acc\")"
    ]
   }
  ],
