--- a/src/python3_course_for_devs/notebooks/comprehension.ipynb
+++ b/src/python3_course_for_devs/notebooks/comprehension.ipynb
@@ -147,6 +147,15 @@
     "# generator_obj 已被遍历，无法再次遍历\n",
     "print(list(generator_obj))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dict(zip([\"a\", \"(1,2)\"], [1, 2]))"
+   ]
   }
  ],
  "metadata": {
