--- a/src/python3_course_for_devs/notebooks/dict.ipynb
+++ b/src/python3_course_for_devs/notebooks/dict.ipynb
@@ -6,23 +6,144 @@
    "source": [
     "# 字典\n",
     "\n",
-    "字典是`可变类型`但非`序列类型`（`可变类型`和`序列类型`的概念在 [数据类型]('./types.ipynb') 有讲）\n",
+    "字典是 [可变类型](./types.ipynb)。\n",
     "\n",
-    "字典的键必须是不可变的对象，这是因为字典使用键来进行哈希（hashing）和快速查找。不可变对象的哈希值在创建后不会发生改变，因此可以保证字典中键的唯一性和可靠性。\n",
+    "字典的键必须是 [可哈希的](./types.ipynb)，因为字典使用键来进行哈希（hashing）和快速查找。可哈希对象保证键的唯一性和可靠性。\n",
     "\n",
-    "字典的值，可以是任何对象，包括标准对象和用户自定义对象。并且同一个字典中可以有多个键对应相同的值。但是，字典的键必须是唯一的，如果同一个键被赋值多次，后面的值会覆盖前面的值。\n"
+    "字典的值可以是任何对象，包括标准对象和自定义对象。同一个字典中可以有多个键对应相同的值。但字典的键必须是唯一的，如果同一个键被赋值多次，后面的值会覆盖前面的值。\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 创建一个字典\n"
+    "### 字典创建\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**使用字面值形式**\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 190,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'foo': 5, 2: 28, ('bar', 8): 't'}"
+      ]
+     },
+     "execution_count": 190,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 空字典\n",
+    "{}\n",
+    "\n",
+    "{\"foo\": 5, 2: 28, (\"bar\", 8): \"t\"}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**使用 `dict` 方法**\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 191,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'a': 1, (1, 2): 2}"
+      ]
+     },
+     "execution_count": 191,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 可迭代对象键值对 - 列表\n",
+    "dict([(\"a\", 1), ((1, 2), 2)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 192,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{(1, 2): 2, 'a': 1}"
+      ]
+     },
+     "execution_count": 192,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 可迭代对象键值对 - 集合\n",
+    "dict({(\"a\", 1), ((1, 2), 2)})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 193,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'a': 1, (1, 2): 2}"
+      ]
+     },
+     "execution_count": 193,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 可迭代对象键值对 - 字典\n",
+    "dict({\"a\": 1, (1, 2): 2})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'a': 1, 'b': 2}"
+      ]
+     },
+     "execution_count": 194,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 关键字参数\n",
+    "dict(a=1, b=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
@@ -31,19 +152,13 @@
        "{1: '统一的默认值', '4': '统一的默认值'}"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 195,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 通过字面值方式\n",
-    "d = {\"foo\": 5, 2: 28, (\"bar\", 8): \"t\"}\n",
-    "\n",
-    "# 空字典\n",
-    "{}\n",
-    "\n",
-    "# 参数 keys 是一个可迭代的对象，用于指定新字典的键；value 是可选参数，表示新字典中所有键对应的统一值，默认为 None\n",
+    "# 可迭代对象 keys 指定新字典的键，可选参数 value 表示统一默认值，默认为 None\n",
     "dict.fromkeys({1, \"4\"}, \"统一的默认值\")"
    ]
   },
@@ -51,73 +166,64 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 值访问\n"
+    "## 一些字典操作\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "d[\"foo\"]\n",
-    "\n",
-    "d.get(\"foo\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 添加值\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [],
    "source": [
-    "d[\"new\"] = \"new\""
+    "d = {\"a\": 1}"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 值更新\n"
+    "**添加/更新元素**\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'foo': 5, 2: 28, ('bar', 8): 'tt', 'new': 'new'}"
+       "{'a': 1, 'b': '不存在则设置这行字'}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 197,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "d[(\"bar\", 8)] = \"tt\"\n",
-    "\n",
+    "d.setdefault(\"b\", \"不存在则设置这行字\")  # 添加/更新指定键的值，如果不存在则设置默认值\n",
+    "d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 198,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'a': 1, 'b': '不存在则设置这行字', 'c': 3, 'd': 4}"
+      ]
+     },
+     "execution_count": 198,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d.update({\"c\": 3, \"d\": 4})\n",
     "d"
    ]
   },
@@ -125,217 +231,249 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 值删除\n"
+    "**访问元素**\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 199,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 199,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "del d[2]"
+    "d.get(\"a\", \"不存在则返回这行字\")  # 获取指定键的值，如果不存在则返回默认值"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 清空\n"
+    "**删除元素**\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "d.clear()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'a': 2}\n",
-      "{True: 2}\n"
-     ]
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 200,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 字典的键如果重复，那么后面的值会覆盖前面的\n",
-    "\n",
-    "d2 = {\"a\": 1, \"a\": 2}\n",
-    "print(d2)\n",
-    "\n",
-    "d3 = {True: 1, 1: 2}\n",
-    "print(d3)"
+    "d.pop(\"a\", \"不存在则返回这行字\")  # 删除指定键的值，返回被删除值，如果不存在则返回默认值"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 201,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('d', 4)"
+      ]
+     },
+     "execution_count": 201,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d.popitem()  # 返回并删除字典最后一对键值"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 202,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d.clear()  # 清空字典"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 浅拷贝\n",
+    "## 字典视图\n",
     "\n",
-    "拷贝深入讲解在这节 [深拷贝 & 浅拷贝]('./copy.ipynb')\n"
+    "字典视图是随着字典的变化而自动更新的可迭代对象。\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{True: 2}"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "d3.copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'{}'"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "str(d)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('a', 2)]"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(d2.items())\n",
-    "list(d2.items())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['a']"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(d2.keys())\n",
-    "list(d2.keys())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[2]"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(d2.values())\n",
-    "list(d2.values())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'99'"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "d.pop(\"foo\", \"99\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('a', 2)"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "d.popitem()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [],
    "source": [
-    "hash((1)) == hash(1)"
+    "d = {\"a\": 1, \"b\": 2}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 字典键视图\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['a', 'b'])"
+      ]
+     },
+     "execution_count": 204,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d.keys()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 字典值视图\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 205,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_values([1, 2])"
+      ]
+     },
+     "execution_count": 205,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d.values()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 字典键值对视图\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 206,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_items([('a', 1), ('b', 2)])"
+      ]
+     },
+     "execution_count": 206,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d.items()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**字典视图是可迭代对象，因此可以直接用来创建其他 [容器类型](./types.ipynb)**\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 207,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('a', 1), ('b', 2)]"
+      ]
+     },
+     "execution_count": 207,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(d.items())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 208,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(('a', 1), ('b', 2))"
+      ]
+     },
+     "execution_count": 208,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tuple(d.items())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 209,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{('a', 1), ('b', 2)}"
+      ]
+     },
+     "execution_count": 209,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set(d.items())"
    ]
   }
  ],
