--- a/src/python3_course_for_devs/notebooks/function.ipynb
+++ b/src/python3_course_for_devs/notebooks/function.ipynb
@@ -11,23 +11,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 一个简单的函数\n",
+    "## 写一个简单的函数\n",
     "\n",
-    "下面声明一个非常简单的函数，它接收一个姓名参数，并返回打招呼信息，python 函数的基本写法就是这样\n"
+    "定义一个函数，它接收一个姓名参数，并返回打招呼信息。\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'你好, 永强'"
+       "'你好, 开发者'"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -37,7 +37,7 @@
     "    return f\"你好, {name}\"\n",
     "\n",
     "\n",
-    "hello(\"永强\")"
+    "hello(\"开发者\")"
    ]
   },
   {
@@ -46,18 +46,17 @@
    "source": [
     "## 参数\n",
     "\n",
-    "函数传参实际上是一次赋值操作。对于`可变类型`是引用拷贝，对于`不可变类型`是值拷贝，具体解释看[拷贝]('./copy.ipynb')这节\n",
-    "\n",
-    "如果参数没有默认值，则参数是必传参数，如果有默认值，那么参数不必传\n"
+    "函数传参是一次赋值操作。对于 `可变类型` 是引用拷贝，对于 `不可变类型` 是值拷贝，具体解释看[拷贝]('./copy.ipynb')这节。\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 必需参数 & 非必需参数\n",
+    "**必需参数 / 非必需参数**\n",
     "\n",
-    "参数有默认值即为`非必需参数`，否则为`必需参数`\n"
+    "- 非必需参数：有默认值\n",
+    "- 必需参数：无默认值\n"
    ]
   },
   {
@@ -75,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
